[ash] Fix display pref storage

This races with session initialization and can cause display prefs to
fail to be saved properly. Exposed pretty consistently when making
subtle changes to Mojo dispatch timing.

The fix forces DisplayPrefs to wait for the first user session to be
started if a storage attempt happens prior to that.

Bug: 872074
Change-Id: I40f9070b6a6421e8fa3bef2da44ab9e854d3d3c8
Reviewed-on: https://chromium-review.googlesource.com/c/1296547
Reviewed-by: Steven Bennetts <stevenjb@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Reviewed-by: James Cook <jamescook@chromium.org>
Commit-Queue: Ken Rockot <rockot@google.com>
Cr-Commit-Position: refs/heads/master@{#602083}